@@ -1,4 +1,12 @@
-2014-02-12  Gerrit Holl  <gerrit.holl@ltu.se>
+2014-03-05  Gerrit Holl  <gerrit.holl@utoronto.ca>
+
+	* pyatmlab-0-0-10
+
+	* pyatmlab/dataset.py:
+
+	- Started classes abstracting datasets
+
+2014-02-12  Gerrit Holl  <gerrit.holl@smhi.se>
 
 	* pyatmlab-0-0-9
 
